TM-11703 Fix issue aligning end estimated dated

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -164,6 +164,7 @@
           justify-content: space-between
           width: 100%
           align-items: center
+          padding-top: 4px
           .estimated-date-container
             width: 90%
           .delete-command
